primary-vpc-us-west-2/vpc.template
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Description": "Creates the primary VPC with a NAT and bastion server. Project specific VPCs are connected to this VPC.",

    "Parameters": {
        "AvailabilityZone": {
            "Type": "String",
            "Default": "us-west-2a",
            "Description": "Availability zone where primary VPC instances such as the NAT and bastion servers will be placed."
        },
        "BastionKeyName": {
            "Type": "String",
            "Default": "default",
            "Description": "SSH key name used to connect with the bastion server via the ec2-user account.",
            "MinLength": "1",
            "MaxLength": "255",
            "AllowedPattern": "[\\x20-\\x7E]*",
            "ConstraintDescription": "can contain only ASCII characters."
        },
        "InternalKeyName": {
            "Type": "String",
            "Default": "internal",
            "Description": "SSH key name used to connect from the bastion server to other servers via the ec2-user account.",
            "MinLength": "1",
            "MaxLength": "255",
            "AllowedPattern": "[\\x20-\\x7E]*",
            "ConstraintDescription": "can contain only ASCII characters."
        },
        "BashRCSource": {
            "Type": "String",
            "Default": "https://raw.githubusercontent.com/myshkin5/aws-musings/master/bashrc.sh",
            "Description": "Web location of .bashrc to be installed on system accounts."
        }
    },

    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "vpc" ] ] }
                    }
                ]
            }
        },

        "Subnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AvailabilityZone" }, "subnet" ] ] }
                    }
                ]
            }
        },

        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "igw" ] ] }
                    }
                ]
            }
        },

        "GatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "InternetGatewayId": { "Ref": "InternetGateway" }
            }
        },

        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "rtb" ] ] }
                    }
                ]
            }
        },

        "Route": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": { "Ref": "RouteTable" },
                "GatewayId": { "Ref": "InternetGateway" }
            },
            "DependsOn": "GatewayAttachment"
        },

        "SubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "RouteTable" },
                "SubnetId": { "Ref": "Subnet" }
            }
        },

        "NetworkACL": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "acl" ] ] }
                    }
                ]
            }
        },

        "EgressACLEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Egress": true,
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "NetworkACL"
                }
            }
        },
        "IngressACLEntry": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "CidrBlock": "0.0.0.0/0",
                "Protocol": "-1",
                "RuleAction": "allow",
                "RuleNumber": "100",
                "NetworkAclId": {
                    "Ref": "NetworkACL"
                }
            }
        },

        "SubnetNetworkACLAssociation": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "NetworkAclId": { "Ref": "NetworkACL" },
                "SubnetId": { "Ref": "Subnet" }
            }
        },

        "BastionSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "bastion server security group",
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "bastion-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "24.9.253.190/32"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "NATSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "network address translation security group",
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "nat-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "PrivateSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "private security group",
                "VpcId": { "Ref": "VPC" },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "private-sg" ] ] }
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "10.0.0.0/16"
                    }
                ],
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },

        "BastionInstance": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "config": {
                        "files": {
                            "/etc/cfn/cfn-hup.conf": {
                                "content": {
                                    "Fn::Join": ["", [ "[main]\n",
                                        "stack=", { "Ref": "AWS::StackId" }, "\n",
                                        "region=", { "Ref": "AWS::Region" }, "\n"
                                    ]]
                                },
                                "mode": "000400",
                                "owner": "root",
                                "group": "root"
                            },

                            "/etc/cfn/hooks.d/cfn-auto-reloader.conf": {
                                "content": {
                                    "Fn::Join": ["", [
                                        "[cfn-auto-reloader-hook]\n",
                                        "triggers=post.update\n",
                                        "path=Resources.BastionInstance.Metadata.AWS::CloudFormation::Init\n",
                                        "action=/opt/aws/bin/cfn-init -s ", { "Ref": "AWS::StackId" },
                                            " -r BastionInstance ", " --region     ", { "Ref": "AWS::Region" }, "\n",
                                        "runas=root\n"
                                    ]]
                                }
                            },

                            "/home/ec2-user/.bashrc": {
                                "source": { "Ref": "BashRCSource" },
                                "mode": "000644",
                                "owner": "ec2-user",
                                "group": "ec2-user"
                            },
                            "/root/.bashrc": {
                                "source": {
                                    "Ref": "BashRCSource"
                                },
                                "mode": "000644",
                                "owner": "root",
                                "group": "root"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-d13845e1",
                "InstanceType": "t2.micro",
                "KeyName": { "Ref": "BastionKeyName" },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "bastion" ] ] }
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": { "Ref": "Subnet" },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.10",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [
                            {
                                "Ref": "BastionSecurityGroup"
                            }
                        ]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": ["", [
                            "Content-Type: multipart/mixed; boundary=\"===============1111144319324777743==\"\n",
                            "MIME-Version: 1.0\n",
                            "\n",
                            "--===============1111144319324777743==\n",
                            "Content-Type: text/x-shellscript; charset=\"us - ascii\"\n",
                            "MIME-Version: 1.0\n",
                            "Content-Transfer-Encoding: 7bit\n",
                            "Content-Disposition: attachment; filename=\"part1\"\n",
                            "#!/bin/bash\n",

                            "# Helper function\n",
                            "function error_exit\n",
                            "{\n",
                            "  /opt/aws/bin/cfn-signal -e 1 -r \"$1\" '", { "Ref": "BastionInstanceWaitHandle" }, "'\n",
                            "  exit 1\n",
                            "}\n",

                            "yum update -y || error_exit 'yum update failed'\n",

                            "sed -i -e \"s/localhost/", { "Ref": "AWS::StackName" }, "-bastion/g\" /etc/sysconfig/network\n",
                            "sed -i -e \"s/localhost localhost.localdomain/", { "Ref": "AWS::StackName" }, "-bastion ", { "Ref": "AWS::StackName" }, "-bastion.localdomain localhost localhost.localdomain/g\" /etc/hosts\n",

                            "# Initialize CloudFormation\n",
                            "/opt/aws/bin/cfn-init -s ", { "Ref": "AWS::StackId" }, " -r BastionInstance ",
                            "         --region ", { "Ref": "AWS::Region" }, " || error_exit 'Failed to run cfn-init'\n",

                            "# Start up the cfn-hup daemon to listen for changes to the metadata\n",
                            "/opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'\n",

                            "# All done so signal success\n",
                            "/opt/aws/bin/cfn-signal -e 0 -r \"BastionInstance setup complete\" '", { "Ref": "BastionInstanceWaitHandle" }, "'\n",
                            "\n",
                            "--===============1111144319324777743==\n",
                            "Content-Type: text/cloud-config; charset=\"us - ascii\"\n",
                            "Content-Transfer-Encoding: 7bit\n",
                            "Content-Disposition: attachment; filename=\"part2\"\n",
                            "#cloud-config\n",
                            "power_state:\n",
                            " delay: \"+1\"\n",
                            " mode: reboot\n",
                            " message: Initialized\n",
                            " timeout: 30\n",
                            "\n",
                            "--===============1111144319324777743==--"
                        ]]
                    }
                }
            }
        },

        "BastionInstanceWaitHandle": {
            "Type": "AWS::CloudFormation::WaitConditionHandle"
        },

        "BastionInstanceWaitCondition": {
            "Type": "AWS::CloudFormation::WaitCondition",
            "DependsOn": "BastionInstance",
            "Properties": {
                "Handle": { "Ref": "BastionInstanceWaitHandle" },
                "Timeout": "300"
            }
        },

        "NATInstance": {
            "Type": "AWS::EC2::Instance",
            "Metadata": {
                "AWS::CloudFormation::Init": {
                    "config": {
                        "files": {
                            "/etc/cfn/cfn-hup.conf": {
                                "content": {
                                    "Fn::Join": ["", [ "[main]\n",
                                        "stack=", { "Ref": "AWS::StackId" }, "\n",
                                        "region=", { "Ref": "AWS::Region" }, "\n"
                                    ]]
                                },
                                "mode": "000400",
                                "owner": "root",
                                "group": "root"
                            },

                            "/etc/cfn/hooks.d/cfn-auto-reloader.conf": {
                                "content": {
                                    "Fn::Join": ["", [
                                        "[cfn-auto-reloader-hook]\n",
                                        "triggers=post.update\n",
                                        "path=Resources.NATInstance.Metadata.AWS::CloudFormation::Init\n",
                                        "action=/opt/aws/bin/cfn-init -s ", { "Ref": "AWS::StackId" },
                                            " -r NATInstance ", " --region     ", { "Ref": "AWS::Region" }, "\n",
                                        "runas=root\n"
                                    ]]
                                }
                            },

                            "/home/ec2-user/.bashrc": {
                                "source": { "Ref": "BashRCSource" },
                                "mode": "000644",
                                "owner": "ec2-user",
                                "group": "ec2-user"
                            },
                            "/root/.bashrc": {
                                "source": { "Ref": "BashRCSource" },
                                "mode": "000644",
                                "owner": "root",
                                "group": "root"
                            }
                        }
                    }
                }
            },
            "Properties": {
                "AvailabilityZone": { "Ref": "AvailabilityZone" },
                "DisableApiTermination": "FALSE",
                "ImageId": "ami-f032acc0",
                "InstanceType": "t1.micro",
                "KernelId": "aki-fc37bacc",
                "KeyName": { "Ref": "InternalKeyName" },
                "Monitoring": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, "nat" ] ] }
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeleteOnTermination": "true",
                        "Description": "Primary network interface",
                        "DeviceIndex": 0,
                        "SubnetId": { "Ref": "Subnet" },
                        "PrivateIpAddresses": [
                            {
                                "PrivateIpAddress": "10.0.0.11",
                                "Primary": "true"
                            }
                        ],
                        "GroupSet": [ { "Ref": "NATSecurityGroup" }, { "Ref": "PrivateSecurityGroup" } ]
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": ["", [
                            "Content-Type: multipart/mixed; boundary=\"===============1111144319324777743==\"\n",
                            "MIME-Version: 1.0\n",
                            "\n",
                            "--===============1111144319324777743==\n",
                            "Content-Type: text/x-shellscript; charset=\"us - ascii\"\n",
                            "MIME-Version: 1.0\n",
                            "Content-Transfer-Encoding: 7bit\n",
                            "Content-Disposition: attachment; filename=\"part1\"\n",
                            "#!/bin/bash\n",

                            "# Helper function\n",
                            "function error_exit\n",
                            "{\n",
                            "  /opt/aws/bin/cfn-signal -e 1 -r \"$1\" '", { "Ref": "NATInstanceWaitHandle" }, "'\n",
                            "  exit 1\n",
                            "}\n",

                            "yum update -y || error_exit 'yum update failed'\n",

                            "sed -i -e \"s/localhost/", { "Ref": "AWS::StackName" }, "-nat/g\" /etc/sysconfig/network\n",
                            "sed -i -e \"s/localhost localhost.localdomain/", { "Ref": "AWS::StackName" }, "-nat ", { "Ref": "AWS::StackName" }, "-nat.localdomain localhost localhost.localdomain/g\" /etc/hosts\n",

                            "# Initialize CloudFormation\n",
                            "/opt/aws/bin/cfn-init -s ", { "Ref": "AWS::StackId" }, " -r NATInstance ",
                            "         --region ", { "Ref": "AWS::Region" }, " || error_exit 'Failed to run cfn-init'\n",

                            "# Start up the cfn-hup daemon to listen for changes to the metadata\n",
                            "/opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'\n",

                            "# All done so signal success\n",
                            "/opt/aws/bin/cfn-signal -e 0 -r \"NATInstance setup complete\" '", { "Ref": "NATInstanceWaitHandle" }, "'\n",
                            "\n",
                            "--===============1111144319324777743==\n",
                            "Content-Type: text/cloud-config; charset=\"us - ascii\"\n",
                            "Content-Transfer-Encoding: 7bit\n",
                            "Content-Disposition: attachment; filename=\"part2\"\n",
                            "#cloud-config\n",
                            "power_state:\n",
                            " delay: \"+1\"\n",
                            " mode: reboot\n",
                            " message: Initialized\n",
                            " timeout: 30\n",
                            "\n",
                            "--===============1111144319324777743==--"
                        ]]
                    }
                }
            }
        },

        "NATInstanceWaitHandle": {
            "Type": "AWS::CloudFormation::WaitConditionHandle"
        },

        "NATInstanceWaitCondition": {
            "Type": "AWS::CloudFormation::WaitCondition",
            "DependsOn": "NATInstance",
            "Properties": {
                "Handle": {
                    "Ref": "NATInstanceWaitHandle"
                },
                "Timeout": "300"
            }
        },

        "DHCPOptions": {
            "Type": "AWS::EC2::DHCPOptions",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": { "Fn::Join": [ "-", [ { "Ref": "AWS::StackName" }, { "Ref": "AWS::Region" }, "dopt" ] ] }
                    }
                ],
                "DomainName": { "Fn::Join": [ ".", [ { "Ref": "AWS::Region" }, "compute.internal" ] ] },
                "DomainNameServers": [ "AmazonProvidedDNS" ]
            }
        },

        "VPCDHCPOptionsAssociation": {
            "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
            "Properties": {
                "VpcId": { "Ref": "VPC" },
                "DhcpOptionsId": { "Ref": "DHCPOptions" }
            }
        }

    }

}
